# customer_base

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: customer.h  kunde.hpp  parser.hpp
resource/: data.csv
src/: kunde.cpp  main.cpp
test/: CMakeLists.txt  test_base.csv  tester.cpp
